platform/workflows/temporal/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: temporal-ui
  namespace: workflows
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`temporal.mso.lol`)
      kind: Rule
      middlewares:
        - name: chain-auth
          namespace: traefik
      services:
        - name: temporal
          port: 8233
  tls:
    certResolver: cloudflare
